--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -29,8 +29,8 @@
           <li class="carousel__i">
             <figure class="auction__item">
               <a href="#/auctions/lot?id={{_id}}">
-                <p><img class="auction__img" data-src="images/lots/{{image}}" alt="image"><span class="auction__date">Ends: {{dateFormat ends}}</span></p>
-                <figcaption class="auction__caption">{{title}}</figcaption>
+                <p><img class="auction__img" data-src="images/lots/{{image}}" alt="image"></p>
+                <figcaption class="auction__caption">{{title}}<span class="auction__date">Ends: {{dateFormat ends}}</span></figcaption>
                 <div class="auction__price auction__price--active">
                   <p><span>Current price: </span>{{price}}</p>
                 </div>
