--- a/src/styles/media.less
+++ b/src/styles/media.less
@@ -114,6 +114,7 @@
 	}
 
 	.header {
+
 		.menu {
 			position: absolute;
 			top: 20px;
@@ -143,6 +144,11 @@
 				}
 			}
 		}
+
+		&__large &__content {
+				top: 0;
+			}
+
 
 
 		&__small {
