carousel and responsive fix

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1675,6 +1675,10 @@ input.invalid {
 	animation-name: animatemsg;
 	animation-duration: 2s;
 	animation-timing-function: cubic-bezier(1,.91,.45,1.34);
+
+	&--error {
+		background-color: red;
+	}
 }
 
 //carousel styles--------------------------------------------------------------
