--- a/src/views/auctions.hbs
+++ b/src/views/auctions.hbs
@@ -9,51 +9,51 @@
     <h2 class="auction-menu__title">Categories</h2>
     <ul class="auction-menu__list">
       <li class="auction-menu__item"><a href="#/auctions?page=0" class="auction-menu__link">All</a></li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=apparel" class="auction-menu__link">Apparel</a>
+      <li class="auction-menu__item"><a href="#" class="auction-menu__link">Apparel</a>
         <ul class="auction-submenu auction-submenu--hidden">
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel">All</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel&filter=coat">Coats</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel&filter=shirt">Shirts</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel&filter=jeans">Jeans</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel&filter=dress">Dresses</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=apparel&filter=bag">Bags</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel">All</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel&amp;filter=coat">Coats</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel&amp;filter=shirt">Shirts</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel&amp;filter=jeans">Jeans</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel&amp;filter=dress">Dresses</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=apparel&amp;filter=bag">Bags</a></li>
         </ul>
       </li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=auto" class="auction-menu__link">Auto</a>
+      <li class="auction-menu__item"><a href="#" class="auction-menu__link">Auto</a>
         <ul class="auction-submenu auction-submenu--hidden">
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=auto">All</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=auto&filter=modern">Modern cars</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=auto&filter=moto">Motocycles</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=auto&filter=retro">Retro</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=auto">All</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=auto&amp;filter=modern">Modern cars</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=auto&amp;filter=moto">Motocycles</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=auto&amp;filter=retro">Retro</a></li>
         </ul>
       </li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=art" class="auction-menu__link">Art</a>
+      <li class="auction-menu__item"><a href="#" class="auction-menu__link">Art</a>
         <ul class="auction-submenu auction-submenu--hidden">
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=art">All</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=art&filter=painting">Paintings</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=art&filter=coin">Coins</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=art&filter=vase">Vases</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=art&filter=sculpt">Sculpture</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=art">All</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=art&amp;filter=painting">Paintings</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=art&amp;filter=coin">Coins</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=art&amp;filter=vase">Vases</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=art&amp;filter=sculpt">Sculpture</a></li>
         </ul>
       </li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=devices" class="auction-menu__link">Devices</a>
+      <li class="auction-menu__item"><a href="#" class="auction-menu__link">Devices</a>
         <ul class="auction-submenu auction-submenu--hidden">
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=device">All</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=device&filter=laptop">Loptop</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=device&filter=phone">Phones</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=device&filter=tablet">Tablets</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=device&filter=watch">Watches</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=device">All</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=device&amp;filter=laptop">Loptop</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=device&amp;filter=phone">Phones</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=device&amp;filter=tablet">Tablets</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=device&amp;filter=watch">Watches</a></li>
         </ul>
       </li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=furniture" class="auction-menu__link">Furniture</a>
+      <li class="auction-menu__item"><a href="#" class="auction-menu__link">Furniture</a>
         <ul class="auction-submenu auction-submenu--hidden">
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=furniture">All</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=furniture&filter=table">Tables</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=furniture&filter=chair">Chairs</a></li>
-          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&filter=furniture&filter=sofa"></a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=furniture">All</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=furniture&amp;filter=table">Tables</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=furniture&amp;filter=chair">Chairs</a></li>
+          <li class="auction-submenu__item"><a class="auction-submenu__link" href="#/auctions?page=0&amp;filter=furniture&amp;filter=sofa"></a></li>
         </ul>
       </li>
-      <li class="auction-menu__item"><a href="#/auctions?page=0&filter=other" class="auction-menu__link">Other</a></li>
+      <li class="auction-menu__item"><a href="#/auctions?page=0&amp;filter=other" class="auction-menu__link">Other</a></li>
     </ul>
   </div>
   <div class="auction-browse auction__container">
