--- a/src/views/header.hbs
+++ b/src/views/header.hbs
@@ -21,7 +21,7 @@
       <ul class="menu__list">
         <li class="menu__item"><a href="/" class="menu__link">Home</a></li>
         <li class="menu__item"><a href="#about-id" class="menu__link">About Us</a></li>
-        <li class="menu__item"><a href="#/auctions?page=0" id="buy" class="menu__link">Buy & Sell</a></li>
+        <li class="menu__item"><a href="#/auctions?page=0" id="buy" class="menu__link">Buy &amp; Sell</a></li>
         <li class="menu__item"><a href="#how-works-id" class="menu__link">How works</a></li>
         <li class="menu__item"><a href="#join-id" class="menu__link">Join us</a></li>
         <li class="menu__item"><a href="#contacts" class="menu__link">Contacts</a></li>
